--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
         app:srcCompat="@drawable/tesoura" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/text.resultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
